# vins_select_ws

./: CMakeLists.txt  c_cpp_properties.json  settings.json
launch/: vins_rviz.launch
src/: KITTIOdomTest.cpp  rosNodeTest.cpp
src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  odom_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projection_factor.cpp  projection_factor.h
src/featureSelect/: feature_select.cpp  feature_select.h
src/featureTracker/: cvmodified.cpp  cvmodified.h  feature_tracker.cpp  feature_tracker.h
src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp
src/utility/: CameraPoseVisualization.cpp  horizon_generator.cpp  horizon_generator.h  state_defs.h  tic_toc.h  utility.cpp  utility.h  visualization.cpp  visualization.h
